<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>com.sitepulse</groupId>
    <artifactId>sitepulse-engine-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>sitepulse-engine-parent</name>
    <description>SitePulse Engine multi-module build</description>

    <modules>
        <module>sitepulse-engine-http-api</module>
        <module>sitepulse-engine-app</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring-cloud.version>2024.0.1</spring-cloud.version>
        <springdoc.version>2.8.6</springdoc.version>
        <swagger-annotations.version>2.2.31</swagger-annotations.version>
        <minio.version>8.5.17</minio.version>
        <dropbox.version>7.0.0</dropbox.version>
        <pdfbox.version>3.0.3</pdfbox.version>
        <shedlock.version>5.16.0</shedlock.version>
        <lombok.version>1.18.44</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
